# AndroidOpenGLDemo

./: README.md  settings.gradle.kts
app/: CMakeLists.txt  build.gradle.kts
app/src/androidTest/java/site/feiyuliuxing/opengltest/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: native-lib.cpp
app/src/main/cpp/include/: gl_bitmap.cpp  gl_bitmap.h  log_util.cpp  log_util.h  matrix.cpp  matrix.h  my_gl_renderer.cpp  my_gl_renderer.h
app/src/main/java/site/feiyuliuxing/opengltest/: BitmapGLRenderer.kt  MainActivity.kt  MatrixUtil.kt  MyGLRenderer.kt  MyGLSurfaceView.kt
app/src/main/java/site/feiyuliuxing/opengltest/nativelib/: NativeGLRenderer.kt  NativeGLSurfaceView.kt  NativeLib.kt
app/src/main/java/site/feiyuliuxing/opengltest/shapes/: Circular.kt  GLBitmap.kt  GLText.kt  Rectangle.kt  RoundRectangle.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: colors.xml
app/src/test/java/site/feiyuliuxing/opengltest/: ExampleUnitTest.kt
ch2_1/: build.gradle.kts
ch2_1/src/main/: AndroidManifest.xml
ch4_5/: build.gradle.kts
ch4_5/src/main/: AndroidManifest.xml
ch4_5/src/main/res/values/: strings.xml
ch4_5/src/main/res/values-night/: themes.xml
ch4_6/: build.gradle.kts
ch4_6/src/main/: AndroidManifest.xml
ch4_6/src/main/assets/: vertexSource.glsl
ch4_6/src/main/res/values/: strings.xml  (+1 more)
gl_comm/: build.gradle.kts
gl_comm/src/main/: AndroidManifest.xml
gradle/wrapper/: gradle-wrapper.properties
jfreetype/: build.gradle.kts
jfreetype/src/main/cpp/: CMakeLists.txt  jfreetype.cpp
(+37 files in other folders)
